--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.2.1",
     "antd": "^4.18.8",
     "bootstrap": "5.1.3",
+    "flutterwave-react-v3": "^1.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
