--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
+    "react-epic-spinners": "^0.5.0",
     "react-loader-spinner": "^5.1.4",
     "react-redux": "^7.2.6",
     "react-router-dom": "6",
