--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-epic-spinners": "^0.5.0",
     "react-loader-spinner": "^5.1.4",
     "react-redux": "^7.2.6",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
     "react-select": "^5.2.2",
